[package]
name = "pulse-null-types"
version = "0.4.0"
edition = "2021"
description = "Shared contract types for the pulse-null plugin ecosystem"
license = "AGPL-3.0"
repository = "https://github.com/dnacenta/pulse-null-types"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
